# synacor-challenge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  arch-spec  codes
cmake/: compiler_warnings.cmake  static_analyzers.cmake
src/: computer.cpp  computer.hpp  main.cpp  opcodes.hpp
